--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -274,7 +274,7 @@ def "I'll run everywhere but on Windows"() { ... }
 
 - Improve `ExceptionUtil.sneakyThrow` declaration (#1077)
 
-- Print up to 5 last mock invocations for a wrong oder error (#1093)
+- Print up to 5 last mock invocations for a wrong order error (#1093)
 
 - Fix `EmptyOrDummyResponse` returning mock instance for `Object` (#1092)
 
