--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -49,6 +49,12 @@ which should not be a problem in the majority of cases.
 
 At the same time, using JUnit 4's annotations is discouraged (and considered `deprecated`), the same using the other elements of JUnit 4 (as `(Class)Rule`s).
 
+==== Reduce spock-core direct groovy dependencies
+
+`spock-core` now only depends on `groovy.jar`. All other Groovy dependencies have been removed,
+this should make dependency management a bit easier.
+If you relied on other groovy dependencies transitively, you will need to add them directly.
+
 ==== Upgrade to JUnit 5.6 (and JUnit Platform 1.6)
 
 JUnit Platform 1.6 (https://junit.org/junit5/docs/5.6.0/release-notes/index.html#deprecations-and-breaking-changes[deprecated]) methods (from experimental API)  in `EngineExecutionResults` that Spock was using. To keep runtime compatibility with JUnit 5.6 and incoming 5.7 the implementation has been switched to the new methods. As a result, Spock 2.0-M3 cannot work with JUnit 5.5 and lower. The problem might only occur if a project overrides default JUnit Platform version provided by Spock.
@@ -207,7 +213,9 @@ Spy(constructorArgs: [null as String, (Pattern) null])
 def "I'll run everywhere but on Windows"() { ... }
 ----
 
-- Execution with an unsupported Groovy version can allowed with `-Dspock.iKnowWhatImDoing.disableGroovyVersionCheck=true`
+- Execution with an unsupported Groovy version can be allowed with `-Dspock.iKnowWhatImDoing.disableGroovyVersionCheck=true` (#1164) 
+
+- Relax maximum allowed Groovy version in snapshot builds (#1108)
 
 - Upgrade Groovy to 2.5.12 (improved Java 14+ support) and 3.0.4 (fixes #1127)
 
@@ -249,6 +257,35 @@ def "I'll run everywhere but on Windows"() { ... }
 - The setting `unroll { unrollByDefault false }` in the Spock configuration file can be set to roll up all
   features by default if not overwritten by explicit `@Unroll` annotations and thus reinstate the pre
   Spock 2.0 behaviour.
+
+- Updated OSGI support with using `bnd` (#1154, #1175)
+
+- Fix `@PendingFeature` logic (#1103)
+
+- Do not strip type information from arguments (#1134)
+
+- Simplify work-around to get the reference to the current closure (#1131)
+
+- Set source position for return statement in data provider method (#1116)
+
+- Add `Spy(T obj, Closure interactions)` (#1115)
+
+- Reduce number of Groovy dependencies to just groovy.jar (#1109)
+
+- Improve `ExceptionUtil.sneakyThrow` declaration (#1077)
+
+- Print up to 5 last mock invocations for a wrong order error (#1093)
+
+- Fix `EmptyOrDummyResponse` returning mock instance for `Object` (#1092)
+
+- Remove unnecessary reflection for Java 8 types in `EmptyOrDummyResponse` (#1091)
+
+- Update old Issue annotations to point to migrated github issues (#1003)
+
+- Test Spock with Java 14 (#1155)
+
+Thanks to all the contributors to this release: Björn Kautler, Marcin Zajączkowski, Raymond Augé, Roman Tretiak, Camilo Jorquera, Shil Sinha
+
 
 == 2.0-M2 (2020-02-10)
 
